--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ScrollTest</string>
+    <string name="app_name">personalDemoNTL</string>
     <string name="title_activity_dialog_fragment">DialogFragmentActivity</string>
     <string name="title_activity_test">TestActivity</string>
 </resources>
